# rust-hyprland-json

./: Cargo.toml  README.md
.old/: main.0.2.1.rs.bak  main.rs.bak,0.3  main.rs.bak.4  main.rs.bak0.31
src/: main.rs  main.rs.back  main.rs.bak.0.32  main.rs.bak2  text.rs
