[package]
name = "rust-hyprland-json"
version = "0.3.5"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "z"   # Optimize for size
lto = true #remove unessecary code
strip = true # strip debug symbols
codegen-units = 1 #split crate into multipe compile units
panic = "abort" # remove panic code
