[package]
name = "rust-hyprland-json-unstable"
version = "0.4.0"
edition = "2024"

[dependencies]
clippy = "0.0.302"
pico-args = "=0.4.2"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"

[profile.release]
opt-level = "z"   # Optimize for size
lto = true #remove unessecary code
strip = true # strip debug symbols
codegen-units = 1 #split crate into multipe compile units
panic = "abort" # remove panic code
